Added install of Nautilus extension nautilus-open-any-terminal

--- a/pop_os/pop_os.yml
+++ b/pop_os/pop_os.yml
@@ -79,6 +79,7 @@
 #- ansible.builtin.import_playbook: ../VMM.yml
 - ansible.builtin.import_playbook: gnome_extensions.yml
 - ansible.builtin.import_playbook: bluray.yml
+- ansible.builtin.import_playbook: nautilus_terminal.yml
 
 - name: Cleanup
   hosts: localhost
