--- a/pop_os/pkgs_to_install.yml
+++ b/pop_os/pkgs_to_install.yml
@@ -34,7 +34,7 @@ pkgs_to_install:
   
 pkgs_to_install_flatpak:
   - com.discordapp.Discord
-  #- org.onlyoffice.desktopeditors
+  - org.onlyoffice.desktopeditors
   - org.raspberrypi.rpi-imager
   #- com.st.STM32CubeIDE
   #- com.microsoft.Teams
