Added alias to restart gnome-shell

--- a/pop_os/aliases.yml
+++ b/pop_os/aliases.yml
@@ -6,4 +6,5 @@ aliases: {
     'apt': 'sudo apt',
     'dpkg': 'sudo dpkg',
     'ls': 'ls --color=auto',
+    'gnome-shell-restart': 'killall -3 gnome-shell',
 }
