Added alias for date with personal display format

--- a/pop_os/aliases.yml
+++ b/pop_os/aliases.yml
@@ -7,4 +7,5 @@ aliases: {
     'dpkg': 'sudo dpkg',
     'ls': 'ls --color=auto',
     'gnome-shell-restart': 'killall -3 gnome-shell',
+    'date'='date "+%a %d %b %Y %I:%M:%S %p %Z"',
 }
