--- a/pop_os/aliases.yml
+++ b/pop_os/aliases.yml
@@ -7,5 +7,5 @@ aliases: {
     'dpkg': 'sudo dpkg',
     'ls': 'ls --color=auto',
     'gnome-shell-restart': 'killall -3 gnome-shell',
-    'date'='date "+%a %d %b %Y %I:%M:%S %p %Z"',
+    'date': 'date "+%a %d %b %Y %I:%M:%S %p %Z"',
 }
