--- a/pop_os/pkgs_to_install.yml
+++ b/pop_os/pkgs_to_install.yml
@@ -14,6 +14,7 @@ pkgs_to_install:
   - mozillavpn
   - neofetch
   - net-tools
+  - python-is-python3
   - python3-pip
   - python3-tk
   - python3-venv
