--- a/debian-xfce/pkgs_to_install.yml
+++ b/debian-xfce/pkgs_to_install.yml
@@ -19,6 +19,7 @@ pkgs_to_install:
   #- "{{ lookup('ansible.builtin.env', 'HOME') }}/Downloads/protonvpn.deb"
   - python-is-python3
   - python3-pip
+  - python3-pylsp
   - python3-tk
   - python3-venv
   - ristretto
