--- a/debian-xfce/pkgs_to_install.yml
+++ b/debian-xfce/pkgs_to_install.yml
@@ -6,7 +6,7 @@ pkgs_to_install:
   #- gnome-shell-extension-gsconnect
   - gnote
   - gvfs-backends
-  #- helix
+  - helix
   - htop
   - kate
   - konsole
@@ -18,6 +18,7 @@ pkgs_to_install:
   - net-tools
   #- "{{ lookup('ansible.builtin.env', 'HOME') }}/Downloads/protonvpn.deb"
   - python-is-python3
+  - python3-launchpadlib
   - python3-pip
   - python3-pylsp
   - python3-tk
@@ -25,6 +26,7 @@ pkgs_to_install:
   - ristretto
   - rsync
   - sl
+  - software-properties-common
   #- texstudio
   - thefuck
   - thunderbird
