Changed Flathub URL to match Flatpak docs setup.

--- a/flatpak.yml
+++ b/flatpak.yml
@@ -13,7 +13,7 @@
           check_mode: '{{ debug_mode }}'
           community.general.flatpak_remote:
             name: flathub
-            flatpakrepo_url: https://flathub.org/repo/flathub.flatpakrepo
+            flatpakrepo_url: https://dl.flathub.org/repo/flathub.flatpakrepo
             method: user
             state: present
         
