--- a/debian-xfce/pkgs_to_install.yml
+++ b/debian-xfce/pkgs_to_install.yml
@@ -72,3 +72,4 @@ pkgs_to_install_flatpak:
   - us.zoom.Zoom
   - com.github.Eloston.UngoogledChromium
   - https://valent.andyholmes.ca/valent.flatpakref
+  - org.signal.Signal
