--- a/rust.yml
+++ b/rust.yml
@@ -32,5 +32,9 @@
     ansible.builtin.command:
       cmd: '{{ RUSTUP }} component add rust-analyzer'
 
-  # TODO: Remove rustfmt from stable
+  - name: 'RUST: Removing rustfmt from stable toolchain'
+    check_mode: '{{ debug_mode }}'
+    ansible.builtin.command:
+      cmd: '{{ RUSTUP }} component remove rustfmt'
+
   # TODO: Install nightly toolchain
