Rigged rustfmt to only use nightly toolchain version

--- a/pop_os/aliases.yml
+++ b/pop_os/aliases.yml
@@ -8,4 +8,5 @@ aliases: {
     'ls': 'ls --color=auto',
     'gnome-shell-restart': 'killall -3 gnome-shell',
     'date': 'date "+%a %d %b %Y %I:%M:%S %p %Z"',
+    'rustfmt': 'rustup run nightly rustfmt',
 }
