--- a/debian-xfce/pkgs_to_install.yml
+++ b/debian-xfce/pkgs_to_install.yml
@@ -73,3 +73,4 @@ pkgs_to_install_flatpak:
   - com.github.Eloston.UngoogledChromium
   - https://valent.andyholmes.ca/valent.flatpakref
   - org.signal.Signal
+  - com.sindresorhus.Caprine    # Facebook Messenger client
