--- a/debian-xfce/debian-xfce.yml
+++ b/debian-xfce/debian-xfce.yml
@@ -94,6 +94,7 @@
 #- ansible.builtin.import_playbook: gnome_extensions.yml
 #- ansible.builtin.import_playbook: bluray.yml
 - ansible.builtin.import_playbook: ../rust.yml
+- ansible.builtin.import_playbook: dvd.yml
 
 - name: Cleanup
   hosts: localhost
