Added systemd-timesyncd to APT package list

--- a/debian-xfce/pkgs_to_install.yml
+++ b/debian-xfce/pkgs_to_install.yml
@@ -27,6 +27,7 @@ pkgs_to_install:
   - rsync
   - sl
   - software-properties-common
+  - systemd-timesyncd
   #- texstudio
   - thefuck
   - thunderbird
